# AIF-ARC-AGI-public

./: README.md  example.env  pyproject.toml
generate-execute/: README.md  plot_data.ipynb  run_double_modality_experiment.py  run_single_modality_experiment.py
generate-execute/data/experiment_results/20251105_1142/: BUGFIXES_SUMMARY.md  BUG_ANALYSIS.md  CROSS_ORDER_ANALYSIS.md  HYPOTHESIS_QUALITY_ANALYSIS.md  HYPOTHESIS_QUALITY_ANALYSIS2.md  HYPOTHESIS_QUALITY_ANALYSIS3.md  PRE_FIX_STATE.md  RESUME_NOTE.md  TEST_CASE_INVESTIGATION.md  cross_order_analysis.ipynb  fix_error_fields.py  fix_invalid_grids.py  fix_pre_fix_test_cases.py  plot_cross_order_effects.py  recalculate_test_scores.py  results.json
generate-execute/data/experiment_results/20251105_1142/col_image_ascending/: grids.json  grids_reduced.json  hypothesis.json  results.json  results_reduced.json
generate-execute/data/experiment_results/20251105_1142/col_image_descending/: grids.json  grids_reduced.json  hypothesis.json  (+2 more)
generate-execute/data/experiment_results/20251108_1435/: results.json
generate-execute/data/experiment_results/20251108_1444/: results.json
generate-execute/data/experiment_results/20251108_1455/: results.json
generate-execute/data/experiment_results/20251108_1504/: results.json
generate-execute/data/experiment_results/20251108_2058/: EXPERIMENT_NOTE.txt  results_combined.json  results_trial01.json  results_trial02.json  results_trial03.json  results_trial04.json
perception/: README.md  calculate_perception_scores.ipynb  example_extract_scoring_data.py  perception_scores_summary.csv  print_modality_description.py  run_modality_vision_experiment.py
perception/data/modality_vision_20251107_2355/: summary.json
perception/data/modality_vision_20251107_2355/0934a4d8/: result.json
perception/data/modality_vision_20251107_2355/135a2760/: result.json
perception/data/modality_vision_20251107_2355/136b0064/: result.json
perception/data/modality_vision_20251107_2355/13e47133/: result.json
perception/data/modality_vision_20251107_2355/142ca369/: result.json
perception/data/modality_vision_20251108_1148/: summary.json
perception/data/modality_vision_20251108_1148/0934a4d8/: result.json
perception/data/modality_vision_20251108_1148/135a2760/: result.json
perception/data/modality_vision_20251108_1148/136b0064/: result.json
perception/data/modality_vision_20251108_1148/13e47133/: result.json
perception/data/modality_vision_20251108_1148/142ca369/: result.json
perception/data/modality_vision_20251108_1205/: summary.json
perception/data/modality_vision_20251108_1205/0934a4d8/: result.json
perception/data/modality_vision_20251108_1205/135a2760/: result.json
perception/data/modality_vision_20251108_1205/136b0064/: result.json
perception/data/modality_vision_20251108_1205/13e47133/: result.json
perception/data/modality_vision_20251108_1205/142ca369/: result.json
src/: __init__.py
src/nodes/: hypothesis_fast_nodes.py  models.py
src/utils/: data_loader.py  follow_instructions.py  modality_encoder.py  score_utils.py  scoring_engine.py
(+101 files in other folders)
