[project]
name = "aif-arc-agi-public"
version = "0.1.0"
description = "AIF agent system for solving ARC-AGI puzzles"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "bwen@hogarthian.com"}
]
dependencies = [
    # Core LLM integration with multiple providers
    "litellm>=1.78.0",  # Supports watsonx, openai, claude, grok, qwen, deepseek, groq
    # Agent framework and workflow management
    "pocketflow>=0.0.3",  # Multi-agent workflow framework
    # Image processing for grid visualization
    "pillow>=12.0.0",  # PIL for image processing and grid visualization
    "numpy>=2.3.0",  # Numerical operations for grid transformations
    # Data validation and models
    "pydantic>=2.0.0",  # Data validation and structured outputs
    # Environment and configuration
    "python-dotenv>=1.0.0",  # Environment variable management
    # Logging and observability
    "langfuse>=3.8.1",  # LLM observability and tracing
    "opentelemetry-api>=1.38.0",  # OpenTelemetry API
    "opentelemetry-sdk>=1.38.0",  # OpenTelemetry SDK
    "opentelemetry-exporter-otlp>=1.38.0",  # OTLP exporter for Langfuse
    # Data analysis and visualization
    "scipy>=1.16.2",  # Scientific computing
    "pandas>=2.3.3",  # Data analysis (for notebooks)
    "matplotlib>=3.10.7",  # Plotting (for experiment visualization)
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",  # Code linting and formatting
    "mypy>=1.0.0",  # Type checking
    "pytest>=7.0.0",  # Testing framework
    "pytest-asyncio>=0.21.0",  # Async testing support
    "jupyterlab>=4.0.0",  # Jupyter notebook environment
]

[tool.uv]
dev-dependencies = []

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
ignore_missing_imports = true
follow_imports = 'skip'
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "data",
    "logs",
    "generate-execute/data",
    "perception/data",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "node_modules",
    "dist",
    "build",
    "data",
    "logs",
    "generate-execute/data",
    "perception/data",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",   # line too long, handled by formatters
    "B008",   # do not perform function calls in argument defaults
    "W191",   # indentation contains tabs
    "B904",   # Allow raising exceptions without from e
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

